--- a/games.html
+++ b/games.html
@@ -189,7 +189,7 @@
         <h1>Our Exciting Tea-Themed Games</h1>
         <div class="game-buttons">
             <a href="/games/2dtea.html">Tea Maze Adventure</a>
-            <a href="/games/teaquest3d.html">TeaQuest 3D</a>
+            <a href="/games/teaquest/game.html">TeaQuest 3D</a>
         </div>
     </div>
 
