--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <p>
             Dive into a world of delightful tea-themed games and adventures. From interactive journeys to exciting challenges, we have something brewing for every tea enthusiast.
         </p>
-        <a href="#" class="cta-button">Check our our latest 3D game!</a>
+        <a href="games/teaquest/game.html" class="cta-button">Check our our latest 3D game!</a>
     </div>
 
     <!-- Content Section -->
