--- a/games/tea-clicker.html
+++ b/games/tea-clicker.html
@@ -182,6 +182,34 @@
             border-radius: 4px;
         }
 
+        /* Save/Load Buttons */
+        .save-load-buttons {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .save-load-buttons button {
+            background-color: #8B4513;
+            color: #FFFFFF;
+            border: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            font-size: 16px;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        .save-load-buttons button:hover {
+            background-color: #6B3A0E;
+            color: #FFDAB9;
+        }
+
+        /* File Input (Hidden) */
+        #fileInput {
+            display: none;
+        }
+
         /* Responsive Design */
         @media screen and (max-width: 768px) {
             .sidebar {
@@ -196,6 +224,15 @@
 
             .main-content {
                 margin-top: 20px;
+            }
+
+            .save-load-buttons {
+                flex-direction: column;
+                margin-top: 10px;
+            }
+
+            .save-load-buttons button {
+                margin: 5px 0;
             }
         }
     </style>
@@ -231,6 +268,13 @@
             </div>
             <div class="tea-count" id="teaCount">0 Cups of Tea</div>
             <div class="tea-per-second" id="teaPerSecond">per second: 0</div>
+
+            <!-- Save and Load Buttons -->
+            <div class="save-load-buttons">
+                <button onclick="saveGame()">Save Game</button>
+                <button onclick="document.getElementById('fileInput').click()">Load Game</button>
+                <input type="file" id="fileInput" accept=".teaclick" onchange="loadGame(event)">
+            </div>
         </div>
     </div>
 
@@ -350,6 +394,45 @@
             setTimeout(() => {
                 kettleContainer.removeChild(floatingText);
             }, 1000);
+        }
+
+        // Save Game Function
+        function saveGame() {
+            const gameState = {
+                teaCount: teaCount,
+                teaPerClick: teaPerClick,
+                upgrades: upgrades,
+            };
+            const gameStateStr = JSON.stringify(gameState);
+            const blob = new Blob([gameStateStr], { type: 'application/json' });
+            const url = URL.createObjectURL(blob);
+
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'tea_clicker_save.teaclick';
+            a.click();
+            URL.revokeObjectURL(url);
+        }
+
+        // Load Game Function
+        function loadGame(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    try {
+                        const gameState = JSON.parse(e.target.result);
+                        teaCount = gameState.teaCount;
+                        teaPerClick = gameState.teaPerClick;
+                        upgrades = gameState.upgrades;
+                        updateUpgrades();
+                        updateTeaCount();
+                    } catch (err) {
+                        alert('Failed to load game. The file may be corrupt or invalid.');
+                    }
+                };
+                reader.readAsText(file);
+            }
         }
 
         // Start the game loop
